main/default/objects/pharos__Jira_Fields_Mapping__c/fields/pharos__Issue_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Issue_Type_Id__c</fullName>
    <label>Issue Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>