main/default/objects/pharos__Jira_Fields_Mapping__c/fields/pharos__Jira_Field__c.field-meta.xml
<CustomField>
    <fullName>pharos__Jira_Field__c</fullName>
    <label>Jira Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>