main/default/objects/pharos__Jira_Fields_Mapping__c/fields/pharos__Log_Field__c.field-meta.xml
<CustomField>
    <fullName>pharos__Log_Field__c</fullName>
    <label>Log Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>