main/default/objects/pharos__Jira_Fields_Mapping__c/fields/pharos__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Project_Id__c</fullName>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>