main/default/objects/pharos__Jira_Fields_Mapping__c/fields/pharos__SobjectType__c.field-meta.xml
<CustomField>
    <fullName>pharos__SobjectType__c</fullName>
    <label>SobjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>